services/mobile-app/openshift/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: iot-graphql-api
    app.openshift.io/connects-to: iot-sse-server
  labels:
    app: mobile-app
    app.openshift.io/runtime: nginx
    app.kubernetes.io/part-of: frontends
  name: mobile-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: mobile-app
    deploymentconfig: mobile-app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mobile-app
        deploymentconfig: mobile-app
    spec:
      containers:
      - image: mobile-app:latest
        imagePullPolicy: Always
        name: mobile-app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - mobile-app
      from:
        kind: ImageStreamTag
        name: mobile-app:latest
    type: ImageChange
