services/mobile-app/openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mobile-app
  name: mobile-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mobile-app
    weight: 100
  wildcardPolicy: None
